<resources>
    <string name="app_name">Learnthis</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_courses">Курси</string>
    <string name="menu_marks">Оцінки</string>
    <string name="menu_options">Налаштування</string>

    <string name="sign_up">Реєстрація</string>
    <string name="do_sign_up">Зареєструватися</string>
    <string name="log_in">Вхід</string>
    <string name="do_log_in">Увійти</string>
    <string name="im_teacher">Я учитель</string>
    <string name="im_learner">Я ученик</string>
    <string name="im_parent">Я батько</string>
    <string name="first_name">"Ім'я"</string>
    <string name="second_name">Прізвище</string>
    <string name="f_name_and_s_name">"Прізвище та Ім'я"</string>
    <string name="email">Эл. Пошта</string>
    <string name="new_email">Нова Эл. Пошта</string>
    <string name="old_email">Стара Эл. Пошта</string>
    <string name="password">Пароль</string>
    <string name="edited_email">Перейдіть за посиланням у листі що вам прийшло на эмайл для підтвердження і зміни пошти на нову</string>
    <string name="reply_password">Повтор паролю</string>
    <string name="email_error_message">Не коректний адрес пошти</string>
    <string name="new_email_error_message">Не коректний адрес нової пошти</string>
    <string name="old_email_error_message">Не коректний адрес старої пошти</string>
    <string name="ok">Добре</string>
    <string name="back">Назад</string>
    <string name="password_forgot">Забули пароль?</string>
    <string name="success_sign_up_message">Ви були зареєстровані. Зараз на вашу пошту прийде лист з
        підтвердженням електронної пошти. Будь ласка підтвердіть пошту та можете увійти до акаунту.
    </string>
    <string name="forgot_password_message">Введіть пошту на яку ви були зареєстровані. Вам прийде лист для заміни паролю.
    </string>
    <string name="forgot_password_success_message">На вашу пошту висланий лист для зміни паролю
    </string>
    <string name="error_firstName">"Заповніть поле Ім'я"</string>
    <string name="error_theme">"Заповніть поле Ім'я"</string>
    <string name="error_course_name">"Заповніть поле Курс"</string>
    <string name="error_secondName">Заповніть поле Прізвище</string>
    <string name="error_email">Эл. Пошта введена не корректно</string>
    <string name="error_password">Довжина паролю не відповідає необхідній</string>
    <string name="error_reply_password">Повтор паролю не співпадає</string>
    <string name="error_email_verified">Підтвердіть эмайл за допомогою листа який прийшов до вашої скриньки</string>
    <string name="edit">Змінити</string>
    <string name="image">Аватар</string>
    <string name="sing_out">Вийти з акаунту</string>
    <string name="equals">Ви не змінили значення</string>
    <string name="success">Успішно</string>
    <string name="upload">Завантажити</string>
    <string name="upload_on">Завантаження</string>
    <string name="upload_on_process">Завантаження в процессі</string>
    <string name="error">Помилка</string>
    <string name="create_course">Створити курс</string>
    <string name="course">Курс</string>
    <string name="enter_course_name">Введіть назву курсу</string>
    <string name="success_course_created">Курс успешно создан</string>
    <string name="delete">Видалити</string>
    <string name="add">Додати</string>
    <string name="learners">Учні</string>
    <string name="choose_course_element">Оберіть тип створюваного елемента</string>
    <string name="lecture">Лекція</string>
    <string name="task">Завдання</string>
    <string name="theme">Тема</string>
    <string name="download">Завантажити</string>
    <string name="add_materials">Додати матеріали</string>
    <string name="add_lecture">Створити лекцію</string>
    <string name="add_task">Створити завдання</string>
    <string name="create">Створити</string>
    <string name="prev_load_material">Спочатку завантажте матеріали</string>
</resources>