<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SingUpChoiceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sing_up" />

    <Button
        android:id="@+id/buttonTeacher"
        android:layout_width="@dimen/base_button_width"
        android:layout_height="@dimen/base_button_height"
        android:layout_marginTop="128dp"
        android:text="@string/im_teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool" />

    <Button
        android:id="@+id/buttonLearner"
        android:layout_width="@dimen/base_button_width"
        android:layout_height="@dimen/base_button_height"
        android:layout_marginTop="32dp"
        android:text="@string/im_learner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTeacher" />

    <Button
        android:id="@+id/buttonParent"
        android:layout_width="@dimen/base_button_width"
        android:layout_height="@dimen/base_button_height"
        android:layout_marginTop="32dp"
        android:text="@string/im_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLearner" />
</androidx.constraintlayout.widget.ConstraintLayout>